--- a/SidebarDiagnostics/SidebarDiagnostics.csproj
+++ b/SidebarDiagnostics/SidebarDiagnostics.csproj
@@ -242,6 +242,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="Properties\Resources1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="SidebarModel.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="Constants.cs" />
